[project]
name = "ai110-module2show-pawpal-starter"
version = "0.1.0"
description = "PawPal+ pet care scheduling app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.55.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.73.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
